--- a/da_styler.css
+++ b/da_styler.css
@@ -10,6 +10,42 @@
     --recom-height: 100px;
 }
 
+/* Test css */
+.animation_adapt_test {
+    width: 100px;
+    height: 50px;
+    position: absolute;
+    background-color: coral;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    margin: -50px 0 0 -50px;
+
+    animation: ani-style-test1 5s linear;
+}
+
+@keyframes ani-style-test1 {
+    50% {
+        transform: translateX(300px);
+    }
+
+    100% {
+        transform: translateX(500px);
+    }
+}
+
+@keyframes ani-style-test2 {
+    50% {
+        transform: translateX(-300px);
+    }
+
+    100% {
+        transform: translateX(-500px);
+    }
+}
+
+/* Test css end */
+
 .left-div {
     position: absolute;
     width: 33.33%;
